Refactoring inserter