@@ -18,10 +18,11 @@ public class MeasureNoteInserter {
         // 1. Obliczamy punkt startowy oraz całkowity czas taktu oparty w 100% na gridzie
         int startTick = 0;
         int totalMeasureTicks = 0;
+//        int totalMeasureTicks = measure.getTimeSignature().getTotalTicks();
         boolean targetFound = false;
 
         for (Segment seg : measure.getSegments()) {
-            if (seg.getType() == SegmentType.NOTEREST) {
+            if (seg.isNoteRest()) {
                 if (seg == targetSegment) {
                     targetFound = true;
                 }
@@ -31,13 +32,38 @@ public class MeasureNoteInserter {
                 totalMeasureTicks += seg.getDuration();
             }
         }
-
+        System.out.println("startTick: " + startTick);
+        System.out.println("totalMeasureTicks: " + totalMeasureTicks);
         if (!targetFound) return null;
 
         int targetEndTick = startTick + newTicks;
-        if (targetEndTick > totalMeasureTicks) {
-            return null; // Nuta przekracza ramy taktu
-        }
+        System.out.println("targetEndTick: " + targetEndTick);
+        if (targetEndTick > totalMeasureTicks) return null; // Nuta przekracza ramy taktu
+
+
+
+
+
+//        int startTick = measure.getStartTickOfSegment(targetSegment);
+//        System.out.println("startTick: " + startTick);
+//        if (startTick < 0) return null;
+//
+//        int totalMeasureTicks = measure.getTimeSignature().getTotalTicks();
+//        System.out.println("totalMeasureTicks: " + totalMeasureTicks);
+//        int targetEndTick = startTick + newTicks;
+//        System.out.println("targetEndTick: " + targetEndTick);
+//        if (targetEndTick > totalMeasureTicks) return null; // Nuta przekracza ramy taktu
+//        System.out.println("Przechodzi nulla");
+
+
+
+
+
+
+
+
+
+
 
         // 2. Tniemy siatkę idealnie na końcu naszej nowej nuty (aby następna miała gdzie wylądować)
         ensureSegmentBoundaryAt(measure, targetEndTick, staff, voice);
@@ -45,7 +71,7 @@ public class MeasureNoteInserter {
         // 3. Wycinamy wszystko w edytowanym głosie, co wchodzi w kolizję z naszą nową nutą
         int currentTick = 0;
         for (Segment seg : measure.getSegments()) {
-            if (seg.getType() == SegmentType.NOTEREST) {
+            if (seg.isNoteRest()) {
                 int segDuration = seg.getDuration();
 
                 if (currentTick >= startTick && currentTick < targetEndTick) {
@@ -61,37 +87,38 @@ public class MeasureNoteInserter {
         // 4. Czyste wstawienie nowej nuty
         targetSegment.insertNote(staff, newNote);
 
+        measure.getSegments().removeIf(seg -> seg.isNoteRest() && seg.isEmpty());
+
         // 5. INTELIGENTNE WYPŁNIANIE TAKTU: Naprawia braki pauz i nigdy nie rozpycha siatki!
         fillVoiceGaps(measure, staff, voice);
 
         measure.updateResolutionFromSegments();
         measure.setDirty(true);
 
+
+        System.out.println("SEGMENTY:");
+        int i = 0;
+        for (Segment s : measure.getSegments()) {
+            System.out.println(i++ + ": dur=" + s.getDuration() + " type=" + s.getType());
+        }
+
         return findNextFreeSegment(measure, targetEndTick);
     }
 
-    /**
-     * Skanuje cały takt i wstawia idealnie docięte pauzy tam, gdzie głos jest "pusty".
-     * Szanuje nuty trwające przez kilka segmentów.
-     */
     private static void fillVoiceGaps(Measure measure, Staff staff, int voice) {
         int currentTick = 0;
-        int activeUntil = 0; // Śledzi, do kiedy trwa dźwięk w tym głosie
+        int activeUntil = 0;
 
         for (Segment seg : measure.getSegments()) {
-            if (seg.getType() == SegmentType.NOTEREST) {
+            if (seg.isNoteRest()) {
                 int segDuration = seg.getDuration();
 
                 List<NoteRestElement> nres = seg.getNoteRestByStaffAndVoice(staff, voice);
 
                 if (!nres.isEmpty()) {
-                    // Jeśli segment zawiera nutę/pauzę w tym głosie, aktualizujemy czas aktywności
                     activeUntil = Math.max(activeUntil, currentTick + nres.get(0).getType().getTicks());
                 } else {
-                    // Jeśli w tym segmencie głos jest fizycznie pusty, sprawdzamy, czy w tle brzmi jakaś nuta
                     if (currentTick >= activeUntil && segDuration > 0) {
-                        // Głos milczy całkowicie. Wstawiamy pauzę dociętą EXACTLY do długości segmentu.
-                        // Dzięki temu NIGDY nie rozepchniemy siatki.
                         NoteType fillType = MeasureTimeSignatureAdjuster.findLargestFittingNoteType(segDuration);
                         if (fillType != null) {
                             seg.addElement(staff, new Rest(voice, fillType, measure));
@@ -104,16 +131,13 @@ public class MeasureNoteInserter {
         }
     }
 
-    /**
-     * Dba o to, by we wskazanym ticku istniało fizyczne cięcie w liście segmentów.
-     */
     private static void ensureSegmentBoundaryAt(Measure measure, int targetTick, Staff targetStaff, int targetVoice) {
         List<Segment> segments = measure.getSegments();
         int currentTick = 0;
 
         for (int i = 0; i < segments.size(); i++) {
             Segment seg = segments.get(i);
-            if (seg.getType() != SegmentType.NOTEREST) {
+            if (!seg.isNoteRest()) {
                 currentTick += seg.getDuration();
                 continue;
             }
@@ -128,20 +152,18 @@ public class MeasureNoteInserter {
                 List<NoteType> part1Types = decomposeTicksToNoteTypes(part1Ticks);
                 List<NoteType> part2Types = decomposeTicksToNoteTypes(part2Ticks);
 
-                NoteType firstType = part1Types.get(0);
+                if (part1Types.isEmpty()) return;
+                NoteType firstType = part1Types.getFirst();
 
                 // A. Modyfikujemy dotychczasowy segment
                 for (Staff s : measure.getStaves()) {
                     for (int v = 1; v <= 4; v++) {
                         List<NoteRestElement> nres = seg.getNoteRestByStaffAndVoice(s, v);
-                        boolean isTarget = (s.equals(targetStaff) && v == targetVoice);
+                        boolean isTarget = (s == targetStaff && v == targetVoice);
 
-                        if (!nres.isEmpty()) {
-                            NoteRestElement oldEl = nres.get(0);
-                            if (oldEl instanceof Rest) {
-                                seg.removeNoteRest(s, oldEl);
-                                seg.addElement(s, new Rest(v, firstType, measure));
-                            }
+                        if (!nres.isEmpty() && nres.getFirst() instanceof Rest rest) {
+                            seg.removeNoteRest(s, rest);
+                            seg.addElement(s, new Rest(v, firstType, measure));
                         } else if (isTarget) {
                             // Stabilizator siatki dla edytowanego głosu
                             seg.addElement(s, new Rest(v, firstType, measure));
@@ -151,24 +173,30 @@ public class MeasureNoteInserter {
 
                 // B. Tworzymy nowe segmenty (dla reszty czasu)
                 int insertIndex = i + 1;
-                for (int k = 1; k < allTypesCombined(part1Types, part2Types).size(); k++) {
-                    NoteType subType = allTypesCombined(part1Types, part2Types).get(k);
+                List<NoteType> combined = allTypesCombined(part1Types, part2Types);
+
+                for (int k = 1; k < combined.size(); k++) {
+                    NoteType subType = combined.get(k);
                     Segment fillSeg = new Segment(SegmentType.NOTEREST, measure);
+                    boolean addedAny = false;
 
                     for (Staff s : measure.getStaves()) {
                         for (int v = 1; v <= 4; v++) {
                             List<NoteRestElement> nres = seg.getNoteRestByStaffAndVoice(s, v);
                             if (!nres.isEmpty()) {
-                                NoteRestElement oldEl = nres.get(0);
+                                NoteRestElement oldEl = nres.getFirst();
                                 if (oldEl instanceof Rest) {
                                     fillSeg.addElement(s, new Rest(v, subType, measure));
+                                    addedAny = true;
                                 }
                             }
                         }
                     }
 
-                    segments.add(insertIndex, fillSeg);
-                    insertIndex++;
+                    if (addedAny) {
+                        segments.add(insertIndex, fillSeg);
+                        insertIndex++;
+                    }
                 }
                 return;
             }
